--- a/docs/style.css
+++ b/docs/style.css
@@ -17,6 +17,8 @@
     border-radius: 20px;
     box-shadow: 8px 8px 16px #d1d9e6, -8px -8px 16px #ffffff;
     transition: transform 0.3s ease;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .testimonial-card:hover {
@@ -38,36 +40,24 @@
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
 }
 
-.carousel-control-prev,
-.carousel-control-next {
-    width: 40px;
-    height: 40px;
-    background-color: #6366f1;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
+.headshot {
+    border-radius: 25%;
+    object-fit: cover;
 }
 
-.carousel-control-prev {
-    left:-20px;
+@media only screen and (max-device-width: 1366px) {
+    .parallax {
+        background-image: 'AshZvonham\docs\images\headshot_square.png';
+
+        min-height: 100%;
+
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 }
 
-.carousel-control-next {
-    right: -20px;
-}
-
-.carousel-indicators {
-    bottom: -50px;
-}
-
-.carousel-indicators button {
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: #6366f1;
-    opacity: 0.5;
-}
-
-.carousel-indicators .active {
-    opacity: 1;
+body, html {
+    height: 100%;
 }
