--- a/docs/style.css
+++ b/docs/style.css
@@ -12,6 +12,10 @@
     visibility: visible;
 }
 
+nav {
+    padding-bottom: 15px;
+}
+
 .testimonial-card {
     background: linear-gradient(145deg, #f3f4f6, #ffffff);
     border-radius: 20px;
@@ -42,7 +46,9 @@
 
 .headshot {
     border-radius: 25%;
-    object-fit: cover;
+    width: 100%;
+    height: auto;
+    
 }
 
 @media only screen and (max-device-width: 1366px) {
