added logo, worked with messing with background images 7/5

--- a/style.css
+++ b/style.css
@@ -65,7 +65,11 @@ nav {
 }
 
 body, html {
-    height: 100%;
+    height: 100vh;
+}
+
+.bg-image {
+    background-image: url("./images/watercolor-autumn-leaves-background.avif");
 }
 
 @font-face {
